<package>
  <name>rqt_paramedit</name>
  <version>1.0.0</version>
  <description>
     rqt_paramedit - a rqt plugin for editing parameters using qt_paramedit.
  </description>
  <author email="c.dornhege@gmail.com">Christian Dornhege</author>
  <maintainer email="c.dornhege@gmail.com">Christian Dornhege</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rqt_paramedit</url>
  <url type="repository">https://github.com/dornhege/rqt_paramedit</url>
  <url type="bugtracker">https://github.com/dornhege/rqt_paramedit/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>qt_paramedit</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>rqt_gui</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>qt_paramedit</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>
  <run_depend>rqt_gui</run_depend>

  <export>
      <rqt_gui plugin="${prefix}/rqt_paramedit_plugin.xml"/>
  </export>

</package>


