<package format="2">
  <name>rqt_paramedit</name>
  <version>1.0.1</version>
  <description>
     rqt_paramedit - a rqt plugin for editing parameters using qt_paramedit.
  </description>
  <author email="c.dornhege@gmail.com">Christian Dornhege</author>
  <maintainer email="c.dornhege@gmail.com">Christian Dornhege</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rqt_paramedit</url>
  <url type="repository">https://github.com/dornhege/rqt_paramedit</url>
  <url type="bugtracker">https://github.com/dornhege/rqt_paramedit/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>qtbase5-dev</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>

  <depend>qt_paramedit</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>rqt_gui</depend>

  <export>
      <rqt_gui plugin="${prefix}/rqt_paramedit_plugin.xml"/>
  </export>

</package>


