<package>
  <name>qt_paramedit</name>
  <version>1.0.0</version>
  <description>
     A GUI application for viewing and editing ROS parameters.
  </description>
  <author email="c.dornhege@gmail.com">Christian Dornhege</author>
  <maintainer email="c.dornhege@gmail.com">Christian Dornhege</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/qt_paramedit</url>
  <url type="repository">https://github.com/dornhege/rqt_paramedit</url>
  <url type="bugtracker">https://github.com/dornhege/rqt_paramedit/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4</run_depend>
</package>

