<package format="2">
  <name>qt_paramedit</name>
  <version>1.0.1</version>
  <description>
     A GUI application for viewing and editing ROS parameters.
  </description>
  <author email="c.dornhege@gmail.com">Christian Dornhege</author>
  <maintainer email="c.dornhege@gmail.com">Christian Dornhege</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/qt_paramedit</url>
  <url type="repository">https://github.com/dornhege/rqt_paramedit</url>
  <url type="bugtracker">https://github.com/dornhege/rqt_paramedit/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>qtbase5-dev</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>
  <depend>libqt5-xml</depend>
</package>

